# ma-ot-monotone

./: .gitignore  Makefile  README.md  pyproject.toml
figures/: abs.py  common.py  errors.py  errors_dir.py  newton_steps_comp_malbr.py  optics_curvature.py  optics_target.py  transport_maps.py
main/: abs_sb10.py  abs_sb2.py  abs_sb6.py  angle_to_const.py  angle_to_gaussians.py  const_to_const.py  const_to_gaussians.py  convex_dir.py  convex_dir_lbr.py  demo.py  errors_c1_sb10_dir.py  errors_c1_sb2.py  errors_c1_sb2_dir.py  errors_c1_sb6_dir.py  errors_quartic_sb10_dir.py  errors_quartic_sb2.py  errors_quartic_sb2_dir.py  errors_quartic_sb6_dir.py  errors_singular_sb10_dir.py  errors_singular_sb2_dir.py  errors_singular_sb6_dir.py  ma.py  nonconvex_dir.py  nonconvex_dir_lbr.py  optics.py  rand_to_const.py  rand_to_gaussians.py  ring_to_const.py  ring_to_gaussians.py  three_to_const.py  three_to_gaussians.py
optics/: gencircle.py  genlens.py  genmesh.py  gensquare.py  simulate.sh  simulation.appleseed
